--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </ul>
 
             <div class="container">
-                <a href="https://weli900.github.io/workshop-escuro/" class="container__link">
+                <a href="https://weli900.github.io/workshop-escuro/#" class="container__link">
                     <img class="container__imagem--tema" src="img work/tema claro.png">
                 </a>
                 <a href="#" class="container__link">
