--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="produtos.html" class="lista-menu__link">Produtos</a></li>
                   
                     <li class="lista-menu__item">
-                        <a href="#" class="lista-menu__link">Jogue</a></li>
+                        <a href="https://weli900.github.io/jogue/" class="lista-menu__link">Jogue</a></li>
                 </ul>    
 
                 <li class="opcoes__item"><a href="login.html" class="opcoes__link">Favoritos</a></li>
