--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="banner">
             <h2 class="banner__titulo">Já sabe por onde começar?</h2>
             <p class="banner__texto">Encontre aqui oque vai precisar no seu esporte e lazer!</p>
-            <input type="search" class="banner__pesquisa" placeholder="Qual será sue próximo item?">
+            <input type="search" class="banner__pesquisa" placeholder="Qual será seu próximo item?">
         </section>
 
         <!-- 1º carrosel -->
